--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Project_sem_3.Models.InsurancePackage>
+﻿@*@model IEnumerable<Project_sem_3.Models.InsurancePackage>*@
+@model PagedList.IPagedList<Project_sem_3.Models.InsurancePackage>
+@using PagedList.Mvc
 
 @{
     ViewBag.Title = "Index";
@@ -32,7 +34,18 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                        <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div><div class="row">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div>
+                            <div class="col-sm-12 col-md-6">
+                                <form action="/Admin/InsurancePackages" method="get">
+                                    <div id="dataTable_filter" class="dataTables_filter">
+                                        <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(event)"></label>
+                                    </div>
+                                </form>
+
+                            </div>
+                        </div>
+                        <div class="row">
                             <div class="col-sm-12">
                                 <div class="card-footer">
                                     <div class="row mt-3">
@@ -46,7 +59,7 @@
                                             </div>
                                         </div>
                                         <div class="col-9">
-                                                <button type="button" id="action_contract">Xác nhận</button>
+                                            <button type="button" id="action_contract">Xác nhận</button>
                                         </div>
                                     </div>
                                 </div>
@@ -57,12 +70,12 @@
                                         <tr>
                                             <th rowspan="1" colspan="1"><input type="checkbox" id="checkAll_InsurancePackage" />Select All</th>
                                             <th rowspan="1" colspan="1">Insurance Name</th>
-                                            <th rowspan="1" colspan="1">Name</th>
+                                            <th rowspan="1" colspan="1" class="style-sort">@Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm })</th>
                                             <th rowspan="1" colspan="1">Description</th>
-                                            <th rowspan="1" colspan="1">Price</th>
+                                            <th rowspan="1" colspan="1" class="style-sort">@Html.ActionLink("Price", "Index", new { sortOrder = ViewBag.PriceSortParm })</th>
                                             <th rowspan="1" colspan="1">DurationContract</th>
                                             <th rowspan="1" colspan="1">DurationPay</th>
-                                            <th rowspan="1" colspan="1">CreatedAt</th>
+                                            <th rowspan="1" colspan="1" class="style-sort">@Html.ActionLink("CreatedAt", "Index", new { sortOrder = ViewBag.DateSortParm })</th>
                                             <th rowspan="1" colspan="1">UpdatedAt</th>
                                             <th rowspan="1" colspan="1">Action</th>
                                         </tr>
@@ -89,7 +102,7 @@
                                                 <td>@item.CreatedAt</td>
                                                 <td>@item.UpdatedAt</td>
                                                 <td>
-                                                    <div class ="btn-group">
+                                                    <div class="btn-group">
                                                         <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
                                                         <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
                                                         <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
@@ -102,7 +115,19 @@
                                 </table>
                             </div>
                         </div>
-                        <div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-5">
+                                <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
+                            </div>
+                            <div class="col-sm-12 col-md-5"></div>
+                            <div class="col-sm-12 col-md-2">
+                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page }),
+                               new PagedListRenderOptions()
+                               {
+                                   LiElementClasses = new List<string> { "text-paging" }
+                               })
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -121,35 +146,35 @@
                     $(this).prop('checked'));
             })
 
-        $('#action_contract').click(function () {
-            var selectedIDs = new Array();
-            var action = $('#select-action').val();
-            if (action == 6) {
-                alert('Please select the action you want to perform!');
-                return;
-            }
-            $('input:checkbox.check').each(function () {
-                if ($(this).prop('checked')) {
-                    selectedIDs.push($(this).val());
+            $('#action_contract').click(function () {
+                var selectedIDs = new Array();
+                var action = $('#select-action').val();
+                if (action == 6) {
+                    alert('Please select the action you want to perform!');
+                    return;
                 }
-            });
-            if (selectedIDs.length <= 0) {
-                alert('You have not selected insurance package !');
-                return;
-                }
-            $.ajax({
-                url: "/Admin/InsurancePackages/DeleteAll",
-                type: "POST",
-                dataType: "json",
-                data: {
-                    __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
-                    selectedIDs,
-                    action
-                },
-                success: function (res) {
-                    if (!res == false) {
-                        window.location.reload();
+                $('input:checkbox.check').each(function () {
+                    if ($(this).prop('checked')) {
+                        selectedIDs.push($(this).val());
                     }
+                });
+                if (selectedIDs.length <= 0) {
+                    alert('You have not selected insurance package !');
+                    return;
+                }
+                $.ajax({
+                    url: "/Admin/InsurancePackages/DeleteAll",
+                    type: "POST",
+                    dataType: "json",
+                    data: {
+                        __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
+                        selectedIDs,
+                        action
+                    },
+                    success: function (res) {
+                        if (!res == false) {
+                            window.location.reload();
+                        }
                     },
                     error: function () {
                         alert('error');
@@ -157,6 +182,28 @@
                 });
             })
         })
+        function handle(e) {
+            if (e.keyCode === 13) {
+                e.preventDefault();
+            }
     </script>
 }
 
+<style>
+    .text-paging {
+        color: brown;
+    }
+
+        .text-paging > a {
+            color: black;
+        }
+
+    /*.style-sort {
+        background: url(https://cdn2.iconfinder.com/data/icons/music-player-icons-filled/57/Double_Arrows-512.png) no-repeat right .75rem center/9px 16px;
+        background-position: 64px 64px;
+    }*/
+
+    .style-sort > a {
+        color: crimson;
+    }
+</style>
