--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Deleted.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Deleted.cshtml
@@ -74,9 +74,9 @@
                                                 <td>@item.Status</td>
                                                 <td>
                                                     <span>
-                                                        <button>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
-                                                        <button>@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
-                                                        <button>@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
+                                                        <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
+                                                        <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
+                                                        <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
                                                     </span>
                                                 </td>
                                             </tr>
