--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -17,7 +17,7 @@
         <h1 class="h3 mb-2 text-gray-800">Insurance Package</h1>
         <p class="mb-4"> All contracts of customers about insurances .</p>
 
-        <button type="button" id="delete_checked">Delete Selected</button>
+        @*<button type="button" id="delete_checked">Delete Selected</button>*@
         <div style="margin-bottom:15px;">
             <a href="https://localhost:44362/Admin/InsurancePackages/Create" class="btn btn-info" role="button">Create Insurance Packages</a>
             <a href="https://localhost:44362/Admin/InsurancePackages/Deleted" class="btn btn-info float-right" role="button">Insurance Packages Deleted</a>
@@ -32,24 +32,9 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                        <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div><div class="row">
+                        <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div>
+                        <div class="row">
                             <div class="col-sm-12">
-                                <div class="card-footer">
-                                    <div class="row mt-3">
-                                        <div class="col-3 mt-2">
-                                            <div class="form-group mr-3">
-                                                <select class="form-control mr-2" id="select-action">
-                                                    <option value="6">--Chọn thao tác--</option>
-                                                    <option value="0">Action</option>
-                                                    <option value="-1">Deleted</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-9">
-                                                <button type="button" id="action_contract">Xác nhận</button>
-                                        </div>
-                                    </div>
-                                </div>
                                 <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                                     <thead>
 
@@ -62,8 +47,8 @@
                                             <th rowspan="1" colspan="1">Price</th>
                                             <th rowspan="1" colspan="1">DurationContract</th>
                                             <th rowspan="1" colspan="1">DurationPay</th>
-                                            <th rowspan="1" colspan="1">CreatedAt</th>
-                                            <th rowspan="1" colspan="1">UpdatedAt</th>
+                                            @*<th rowspan="1" colspan="1">CreatedAt</th>
+                                            <th rowspan="1" colspan="1">UpdatedAt</th>*@
                                             <th rowspan="1" colspan="1">Action</th>
                                         </tr>
 
@@ -83,13 +68,13 @@
                                                 </td>
                                                 <td>@item.Name</td>
                                                 <td>@item.Description</td>
-                                                <td>@item.Price</td>
-                                                <td>@item.DurationContract</td>
-                                                <td>@item.DurationPay</td>
-                                                <td>@item.CreatedAt</td>
-                                                <td>@item.UpdatedAt</td>
+                                                <td>@item.Price$</td>
+                                                <td>@item.DurationContract year</td>
+                                                <td>@item.DurationPay $/year</td>
+                                                @*<td>@item.CreatedAt</td>
+                                                <td>@item.UpdatedAt</td>*@
                                                 <td>
-                                                    <div class ="btn-group">
+                                                    <div class="btn-group">
                                                         <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
                                                         <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
                                                         <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
@@ -97,9 +82,24 @@
                                                 </td>
                                             </tr>
                                         }
-
                                     </tbody>
                                 </table>
+                                <div class="card-footer">
+                                    <div class="row mt-3">
+                                        <div class="col-3 mt-2">
+                                            <div class="form-group mr-3">
+                                                <select class="form-control mr-2" id="select-action">
+                                                    <option value="6">--Chọn thao tác--</option>
+                                                    <option value="0">Action</option>
+                                                    <option value="-1">Deleted</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-9" style="margin-top: 8px;">
+                                            <button  type="button" id="action_contract" class="btn btn-success">Confirm</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>
@@ -121,6 +121,7 @@
                     $(this).prop('checked'));
             })
 
+
         $('#action_contract').click(function () {
             var selectedIDs = new Array();
             var action = $('#select-action').val();
@@ -130,7 +131,11 @@
             }
             $('input:checkbox.check').each(function () {
                 if ($(this).prop('checked')) {
-                    selectedIDs.push($(this).val());
+                    var r = confirm("Do you want to delete?");
+                    if (r == true) {
+                        selectedIDs.push($(this).val());
+                    }
+                    
                 }
             });
             if (selectedIDs.length <= 0) {
@@ -157,6 +162,8 @@
                 });
             })
         })
+
+        
     </script>
 }
 
