--- a/Project_sem_3/Areas/Admin/Views/Role/Details.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Role/Details.cshtml
@@ -22,6 +22,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    <button class="btn btn-primary">@Html.ActionLink("Edit", "Edit", new { id = Model.Id })</button> 
+    <button class="btn btn-info">@Html.ActionLink("Back to List", "Index")      </button>
 </p>
