--- a/Project_sem_3/Areas/Admin/Views/Role/Edit.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Role/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>RoleViewModel</h4>
         <hr />
@@ -27,12 +27,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <button class="btn btn-info">@Html.ActionLink("Back to List", "Index")</button>
 </div>
