--- a/Project_sem_3/Areas/Admin/Views/Role/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Role/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button class="btn btn-info" >@Html.ActionLink("Create New", "Create")</button>
 </p>
 <table class="table">
     <tr>
@@ -24,9 +24,9 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button> 
+            <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button> 
+            <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
         </td>
     </tr>
 }
