validate motor house

--- a/Project_sem_3/Areas/Admin/Views/Admin/Table.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Admin/Table.cshtml
@@ -36,7 +36,7 @@
                                                 <td class="sorting_1">
                                                     @item.Insurance
                                                 </td>
-                                                <td>@item.CustomerId</td>
+                                                <td>@item.ApplicationUser</td>
                                                 <td>@item.TotalPrice</td>
                                                 <td>@item.CreatedAt</td>
                                                 <td>@item.UpdatedAt</td>
