--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -57,7 +57,9 @@
                                         <tr>
                                             <th rowspan="1" colspan="1"><input type="checkbox" id="checkAll" />Select All</th>
                                             <th rowspan="1" colspan="1">Name</th>
-                                            <th rowspan="1" colspan="1">CustomerID</th>
+                                            <th rowspan="1" colspan="1">Insurance</th>
+
+                                            <th rowspan="1" colspan="1">Customer</th>
                                             <th rowspan="1" colspan="1">Total Price</th>
                                             <th rowspan="1" colspan="1">Created At</th>
                                             <th rowspan="1" colspan="1">Updated At</th>
@@ -82,13 +84,8 @@
                                                 </td>
 
 
-                                                <td>@item.InsuranceId</td>
 
                                                 <td>@item.ApplicationUserId</td>
-
-                        
-
-
                                                 <td>@item.TotalPrice</td>
                                                 <td>@item.CreatedAt</td>
                                                 <td>@item.UpdatedAt</td>
