--- a/Project_sem_3/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Views/Shared/_Layout.cshtml
@@ -65,13 +65,13 @@
                     <div class="main-navigation" style="font-size:20px;    margin-top: 10px;">
                         <ul class="menu">
                             @*<li class="menu-item"><a href="about.html">About us</a></li>
-                <li class="menu-item"><a href="insurance.html">Insurance plans</a></li>
-                <li class="menu-item"><a href="resource.html">Resources</a></li>
-                <li class="menu-item"><a href="contact.html">Contact</a></li>*@
+                                <li class="menu-item"><a href="insurance.html">Insurance plans</a></li>
+                                <li class="menu-item"><a href="resource.html">Resources</a></li>
+                                <li class="menu-item"><a href="contact.html">Contact</a></li>*@
                             @*<li class="menu-item">@Html.ActionLink("Home", "Index", "Home")</li>*@
                             <li class="menu-item">@Html.ActionLink("About us", "About", "Home")</li>
                             @*<li class="menu-item">@Html.ActionLink("Insurance plans", "Insurance", "Home")</li>
-                <li class="menu-item">@Html.ActionLink("Resource", "Resource", "Home")</li>*@
+                                <li class="menu-item">@Html.ActionLink("Resource", "Resource", "Home")</li>*@
 
                             <li class="menu-item">@Html.ActionLink("Medical", "MedicalInsurance", "Home")</li>
                             <li class="menu-item">@Html.ActionLink("House", "HouseInsurance", "Home")</li>
@@ -83,30 +83,29 @@
 
                         </ul> <!-- .menu -->
                     </div> <!-- .main-navigation -->
+                    @*<div style="float:right" class="main-navigation">
 
-                    <div style="float:right" class="main-navigation">
+                            <ul class="menu">
+                                <li class="menu-item"><a href="/Account/Register">Register</a></li>
+                                <li class="menu-item"><a href="/Account/Login">Login</a></li>
+
+                            </ul>
+                        </div>*@
+
+
+                    <div style="float:right;font-size:20px;    margin-top: 10px;" class="main-navigation">
 
                         <ul class="menu">
-                            <li class="menu-item"><a href="/Account/Register">Register</a></li>
-                            <li class="menu-item"><a href="/Account/Login">Login</a></li>
-
+                            @Html.Partial("_LoginPartial")
                         </ul>
                     </div>
 
-
-                    @*<div style="float:right;font-size:20px;    margin-top: 10px;" class="main-navigation">
-
-            <ul class="menu">
-                @Html.Partial("_LoginPartial")
-            </ul>
-        </div>*@
-
                     @*<div class="social-links">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-pinterest"></i></a>
-        </div>*@
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-google-plus"></i></a>
+                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                        </div>*@
 
                     <div class="mobile-navigation"></div>
                 </div>
@@ -441,9 +440,9 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryui")
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     @RenderSection("scripts", required: false)
-   
+
 
 </body>
 </html>
