--- a/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
@@ -35,12 +35,16 @@
 
                         <div class="row">
                             <div class="col-sm-12 col-md-6">
-                                <div class="dataTables_length" id="dataTable_length">
-                                    <label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label>
-                                </div>
+                                <form action="/Admin/Programmes/" method="get" id="pagesize">
+                                    <div class="dataTables_length" id="dataTable_length">
+                                        <label>
+                                            Show   @Html.DropDownList("pageSize", null, new { @class = "custom-select custom-select-sm form-control form-control-sm" }) entries
+                                        </label>
+                                    </div>
+                                </form>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <form action="/Admin/Programmes" method="get">
+                                <form action="/Admin/Programmes/" method="get">
                                     <div id="dataTable_filter" class="dataTables_filter">
                                         <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(event)"></label>
                                     </div>
@@ -129,67 +133,73 @@
 
 
 
-        $('#action_contract').click(function () {
-            var selectedIDs = new Array();
-            var action = $('#select-action').val();
-            if (action == 6) {
-                alert('Please select the action you want to perform!');
-                return;
-            }
-            $('input:checkbox.check').each(function () {
-                if ($(this).prop('checked')) {
-                    var r = confirm("Do you want to delete?");
-                    if (r == true) {
-                        selectedIDs.push($(this).val());
-                    }
+            $('#action_contract').click(function () {
+                var selectedIDs = new Array();
+                var action = $('#select-action').val();
+                if (action == 6) {
+                    alert('Please select the action you want to perform!');
+                    return;
                 }
-            });
-            if (selectedIDs.length <= 0) {
-                alert('You have not selected programme !');
-                return;
-
-            
-                $.ajax({
-                    url: "/Admin/Programmes/DeleteAll",
-                    type: "POST",
-                    dataType: "json",
-                    data: {
-                        __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
-                        selectedIDs,
-                        action
-                    },
-                    success: function (res) {
-                        if (!res == false) {
-                            window.location.reload();
+                $('input:checkbox.check').each(function () {
+                    if ($(this).prop('checked')) {
+                        var r = confirm("Do you want to delete?");
+                        if (r == true) {
+                            selectedIDs.push($(this).val());
                         }
-                    });
+                    }
+                });
                 if (selectedIDs.length <= 0) {
                     alert('You have not selected programme !');
                     return;
-                }
-                $.ajax({
-                    url: "/Admin/Programmes/DeleteAll",
-                    type: "POST",
-                    dataType: "json",
-                    data: {
-                        __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
-                        selectedIDs
-                    },
-                    success: function (res) {
-                        if (!res == false) {
-                            window.location.href = `/Admin/Programmes`;
-                        }
-                    },
-                    error: function () {
-                        alert('error');
+
+
+                    $.ajax({
+                        url: "/Admin/Programmes/DeleteAll",
+                        type: "POST",
+                        dataType: "json",
+                        data: {
+                            __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
+                            selectedIDs,
+                            action
+                        },
+                        success: function (res) {
+                            if (!res == false) {
+                                window.location.reload();
+                            }
+                        });
+                    if (selectedIDs.length <= 0) {
+                        alert('You have not selected programme !');
+                        return;
                     }
-                });
-            })
+                    $.ajax({
+                        url: "/Admin/Programmes/DeleteAll",
+                        type: "POST",
+                        dataType: "json",
+                        data: {
+                            __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
+                            selectedIDs
+                        },
+                        success: function (res) {
+                            if (!res == false) {
+                                window.location.href = `/Admin/Programmes`;
+                            }
+                        },
+                        error: function () {
+                            alert('error');
+                        }
+                    });
+                })
         })
         function handle(e) {
             if (e.keyCode === 13) {
                 e.preventDefault();
             }
+
+            $(function () {
+                $("#pageSize").change(function () {
+                    $("#pagesize").submit();
+                });
+            });
     </script>
 }
 
