--- a/Project_sem_3/Areas/Admin/Views/HouseInsurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/HouseInsurances/Index.cshtml
@@ -14,8 +14,8 @@
     <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Contracts</h1>
-        <p class="mb-4"> All contracts of customers about insurances .</p>
+        @*<h1 class="h3 mb-2 text-gray-800">Contracts</h1>
+        <p class="mb-4"> All contracts of customers about insurances .</p>*@
 
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
@@ -25,11 +25,12 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                        <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div><div class="row">
+                        <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length">@*<label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label>*@</div></div><div class="col-sm-12 col-md-6">@*<div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div>*@</div></div>
+                        <div class="row">
                             <div class="col-sm-12">
                                 <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                                     <thead>
-                                        <tr><th rowspan="1" colspan="1">Contract ID</th><th rowspan="1" colspan="1">Insurance Packages</th><th rowspan="1" colspan="1">House Type</th><th rowspan="1" colspan="1">DurationHouse</th><th rowspan="1" colspan="1">HouseOwner</th><th rowspan="1" colspan="1">HouserAddress</th><th rowspan="1" colspan="1">Quantity</th><th rowspan="1" colspan="1">UnitPrice</th><th rowspan="1" colspan="1">Action</th></tr>
+                                        <tr>@*<th rowspan="1" colspan="1">Contract ID</th>*@<th rowspan="1" colspan="1">Insurance Packages</th><th rowspan="1" colspan="1">House Type</th><th rowspan="1" colspan="1">DurationHouse</th><th rowspan="1" colspan="1">HouseOwner</th><th rowspan="1" colspan="1">HouserAddress</th><th rowspan="1" colspan="1">Quantity</th><th rowspan="1" colspan="1">UnitPrice</th>@*<th rowspan="1" colspan="1">Action</th>*@</tr>
                                     </thead>
 
                                     <tbody>
@@ -37,28 +38,28 @@
                                         @foreach (var item in Model)
                                         {
                                             <tr role="row" class="odd">
-                                                <td class="sorting_1">
+                                                @*<td class="sorting_1">
                                                     @item.ContractId
-                                                </td>
+                                                </td>*@
                                                 <td>@item.InsurancePackage.Name</td>
                                                 <td>@item.HouseType</td>
                                                 <td>@item.DurationHouse</td>
                                                 <td>@item.HouseOwner</td>
                                                 <td>@item.HouserAddress</td>
                                                 <td>@item.Quantity</td>
-                                                <td>@item.UnitPrice</td>
-                                                <td>
+                                                <td>$@item.UnitPrice</td>
+                                                @*<td>
                                                     <button class="button button1">@Html.ActionLink("Edit", "Edit", new {id = item.ContractId})</button>
                                                     <button class="button button2">@Html.ActionLink("Details", "Details", new {id = item.ContractId})</button>
                                                     <button class="button button3">@Html.ActionLink("Delete", "Delete", new {id = item.ContractId})</button>
-                                                </td>
+                                                </td>*@
                                             </tr>
                                         }
 
                                     </tbody>
                                 </table>
                             </div>
-                        </div><div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>
+                        </div><div class="row"><div class="col-sm-12 col-md-5">@*<div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>*@</div><div class="col-sm-12 col-md-7">@*<div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div>*@</div></div>
                     </div>
                 </div>
             </div>
