--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Edit.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Edit.cshtml
@@ -75,7 +75,7 @@
 
             <div class="form-group">
                 <div class="row">
-                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Price:</label>
+                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first">Price ($):</label>
                     <div class="col-lg-8">
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
@@ -90,10 +90,10 @@
 
             <div class="form-group">
                 <div class="row">
-                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationContract:</label>
+                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationContract (year):</label>
                     <div class="col-lg-8">
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.DurationContract, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor( model => model.DurationContract, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.DurationContract, "", new { @class = "text-danger" })
                         </div>
                         <i class="pad-top-5">
@@ -104,7 +104,7 @@
             </div>
             <div class="form-group">
                 <div class="row">
-                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationPay:</label>
+                    <label class="col-lg-4 col-sm-12 col-form-label col-form-label-first pad-0">DurationPay ($/year):</label>
                     <div class="col-lg-8">
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.DurationPay, new { htmlAttributes = new { @class = "form-control" } })
