--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -36,12 +36,14 @@
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
 
                         <div class="row">
-                            <div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div>
+                            <div class="col-sm-12 col-md-6">
+                               @* <div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div>*@
+                            </div>
                             <div class="col-sm-12 col-md-6">
                                 <form action="/Admin/InsurancePackages" method="get">
-                                    <div id="dataTable_filter" class="dataTables_filter">
+                                    @*<div id="dataTable_filter" class="dataTables_filter">
                                         <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(event)"></label>
-                                    </div>
+                                    </div>*@
                                 </form>
 
                             </div>
@@ -60,7 +62,7 @@
                                             </div>
                                         </div>
                                         <div class="col-9">
-                                            <button type="button" id="action_contract">Xác nhận</button>
+                                            <button type="button" class="btn btn-success" style="margin-top: 8px;" id="action_contract">Confirm</button>
                                         </div>
                                     </div>
                                 </div>
@@ -98,11 +100,12 @@
                                                 </td>
                                                 <td>@item.Name</td>
                                                 <td>@item.Description</td>
-                                                <td>@item.Price$</td>
+                                                <td>$@item.Price</td>
                                                 <td>@item.DurationContract year</td>
-                                                <td>@item.DurationPay $/year</td>
+                                                <td>$@item.DurationPay /year</td>
                                                 @*<td>@item.CreatedAt</td>
-                                                <td>@item.UpdatedAt</td>*@
+                                                <td>@item.UpdatedAt</td>*@ 
+                                                <td>@item.CreatedAt.ToString("dd-MM-yyyy")</td>
                                                 <td>
                                                     <div class="btn-group">
                                                         <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
