--- a/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
@@ -34,13 +34,13 @@
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                         <div class="row">
                             <div class="col-sm-12 col-md-6">
-                                <div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div>
+                                @*<div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div>*@
                             </div>
                             <div class="col-sm-12 col-md-6">
                                 <form action="/Admin/Insurances" method="get">
-                                    <div id="dataTable_filter" class="dataTables_filter">
+                                    @*<div id="dataTable_filter" class="dataTables_filter">
                                         <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(event)"></label>
-                                    </div>
+                                    </div>*@
                                 </form>
                             </div>
                         </div>
@@ -78,7 +78,7 @@
                                                 <td class="sorting_1">
                                                     @item.Name
                                                 </td>
-                                                <td>@item.CreatedAt</td>
+                                                <td>@item.CreatedAt.ToString("dd-MM-yyyy")</td>
 
                                                 <td>
                                                     <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
