--- a/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
@@ -35,15 +35,15 @@
 
                         <div class="row">
                             <div class="col-sm-12 col-md-6">
-                                <div class="dataTables_length" id="dataTable_length">
+                                @*<div class="dataTables_length" id="dataTable_length">
                                     <label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label>
-                                </div>
+                                </div>*@
                             </div>
                             <div class="col-sm-12 col-md-6">
                                 <form action="/Admin/Programmes" method="get">
-                                    <div id="dataTable_filter" class="dataTables_filter">
+                                    @*<div id="dataTable_filter" class="dataTables_filter">
                                         <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(event)"></label>
-                                    </div>
+                                    </div>*@
                                 </form>
                             </div>
                         </div><div class="row">
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                             <div class="col-9">
-                                <button type="button" id="action_contract">Xác nhận</button>
+                                <button type="button" class="btn btn-success" id="action_contract" style="margin-top: 8px;">Xác nhận</button>
                             </div>
                             <div class="col-sm-12">
                                 <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
