--- a/Project_sem_3/Areas/Admin/Views/Role/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Role/Index.cshtml
@@ -23,10 +23,12 @@
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
-        <td>
-            <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button> 
-            <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button> 
-            <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
+        <td>       
+            <div class="btn-group">
+                <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button> 
+                <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button> 
+                <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
+            </div>
         </td>
     </tr>
 }
