--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -106,7 +106,7 @@
                                                 <td>@item.Price$</td>
                                                 <td>@item.DurationContract year</td>
                                                 <td>@item.DurationPay $/year</td>
-                                                @*<td>@item.CreatedAt</td>
+                                                <td>@item.CreatedAt</td>
                                                 <td>
                                                     <div class="btn-group">
                                                         <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
